--- a/codingmore-logback/pom.xml
+++ b/codingmore-logback/pom.xml
@@ -2,40 +2,57 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<!-- 继承spring-boot-starter-parent -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.7</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- 从存储库查找父节点 -->
 	</parent>
+
+	<!-- 项目基本信息 -->
 	<groupId>top.codingmore</groupId>
 	<artifactId>codingmore-logback</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>codingmore-logback</name>
 	<description>Demo project for Spring Boot</description>
+
+	<!-- 项目属性 -->
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
+	<!-- 项目依赖 -->
 	<dependencies>
+
+		<!-- spring-boot-starter-web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- spring-boot-starter-test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
+		<!-- logback-classic -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
+	<!-- 项目构建 -->
 	<build>
+
+		<!-- 项目构建插件 -->
 		<plugins>
+
+			<!-- maven-compiler-plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
