--- a/codingmore-autogenerator/src/main/resources/application.yml
+++ b/codingmore-autogenerator/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring:
-  datasource:
-    type: com.mysql.cj.jdbc.MysqlDataSource
-    username: root
-    password: Codingmore123
+spring: # Spring Boot 配置
+  datasource: # 数据源配置
+    type: com.mysql.cj.jdbc.MysqlDataSource # 数据源类型
+    username: root # 数据库用户名
+    password: Codingmore123 # 数据库密码
     url: jdbc:mysql://localhost:3306/codingmore?useUnicode=true&amp;characterEncoding=utf-8&amp;serverTimezone=Asia/Shanghai&amp;useSSL=false
