--- a/codingmore-mysql/src/main/resources/application.yml
+++ b/codingmore-mysql/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-spring:
-  datasource:
+spring: # Spring Boot 配置
+  datasource: # 数据源配置
     username: codingmore-mysql
     password: YyfR4TDxCwrjZ2Fs
     url: jdbc:mysql://118.190.99.232:3306/codingmore-mysql?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     datasource:
-      type: com.alibaba.druid.pool.DruidDataSource
+      type: com.alibaba.druid.pool.DruidDataSource # 数据源类型
       druid:
         #初始化连接池大小
         initial-size: 5
