--- a/codingmore-redis/pom.xml
+++ b/codingmore-redis/pom.xml
@@ -2,36 +2,52 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <!-- 依赖父项目 -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <!-- 项目信息 -->
     <groupId>top.codingmore</groupId>
     <artifactId>codingmore-redis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>codingmore-redis</name>
     <description>codingmore-redis</description>
+
+    <!-- 项目依赖 -->
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
+    <!-- 项目依赖 -->
     <dependencies>
+
+        <!-- springboot redis依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+
+        <!-- mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!-- springboot test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -39,8 +55,13 @@
         </dependency>
     </dependencies>
 
+    <!-- 项目构建 -->
     <build>
+
+        <!-- 项目构建插件 -->
         <plugins>
+
+            <!-- java编译插件 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
